Bug 440718 - Breeze spinboxes draw empty space even when buttons disabled (QAbstractSpinBox::NoButtons)
Summary: Breeze spinboxes draw empty space even when buttons disabled (QAbstractSpinBo...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 5.22.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-08 01:18 UTC by nyanpasu64
Modified: 2021-09-24 22:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments
Code project to reproduce the bug. (876 bytes, application/gzip)
2021-08-08 01:18 UTC, nyanpasu64
Details
Screenshot of the project comparing regular QSpinBox and NoButtons. (8.18 KB, image/png)
2021-08-08 01:19 UTC, nyanpasu64
Details
Code project to reproduce the bug. (880 bytes, application/gzip)
2021-08-08 01:36 UTC, nyanpasu64
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nyanpasu64 2021-08-08 01:18:31 UTC
Created attachment 140579 [details]
Code project to reproduce the bug.

SUMMARY
In a Qt app containing a QSpinBox/etc. with setButtonSymbols(Q[*]SpinBox::NoButtons), the missing buttons still take up space.

STEPS TO REPRODUCE
1. Download, build, and run my attached project. It constructs two QSpinBox The relevant code is as follows:

    auto w = new QSpinBox(c);
    w->setSizePolicy(QSizePolicy::Fixed, QSizePolicy::Fixed);
    w->setRange(0, 99);
    w->setValue(99);
    w->setButtonSymbols(QSpinBox::NoButtons);

OBSERVED RESULT
There is empty white space to the right of the spinbox with no buttons, matching the white space to the right of the spinbox with buttons.

EXPECTED RESULT
The spinbox with QSpinBox::NoButtons set should have a smaller size hint and not draw empty space to the right of the text field.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.2
Kernel Version: 5.13.7-zen1-1-zen (64-bit)
Graphics Platform: X11
Processors: 12 × AMD Ryzen 5 5600X 6-Core Processor
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GT 730/PCIe/SSE2

ADDITIONAL INFORMATION
I've been poking at this bug locally for a bit. The whitespace's width is SpinBox_ArrowButtonWidth, so grepping for that string should bring up all code responsible for drawing the whitespace. Breeze is being reworked for Plasma 5.23, but the portions of the code I've seen so far are unchanged between 5.22.4 and master.
Comment 1 nyanpasu64 2021-08-08 01:19:13 UTC
Created attachment 140580 [details]
Screenshot of the project comparing regular QSpinBox and NoButtons.
Comment 2 nyanpasu64 2021-08-08 01:36:36 UTC
Created attachment 140581 [details]
Code project to reproduce the bug.

Fixed a QLayout oopsie.
Comment 3 Bug Janitor Service 2021-08-08 02:49:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/120
Comment 4 Nate Graham 2021-08-09 23:02:43 UTC
Git commit 9471c01099519a5a0d95f7c02923c0507c9198ad by Nate Graham, on behalf of Nyan Pasu.
Committed on 09/08/2021 at 23:02.
Pushed by ngraham into branch 'master'.

Don't reserve room for spinbox buttons if buttons disabled

Previously, in Qt Widgets with the Breeze theme active,
QAbstractSpinBox::setButtonSymbols(QAbstractSpinBox::NoButtons) would
hide the buttons but leave a white space where the buttons would
normally be. This changes the Breeze theme to skip adding the width of
the hidden buttons to the spinbox's width.
FIXED-IN: 5.23

M  +9    -5    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/commit/9471c01099519a5a0d95f7c02923c0507c9198ad
Comment 5 nyanpasu64 2021-09-24 20:51:06 UTC
In the process of reverting to vertical spinboxes for Plasma 5.23, the fix to this bug has been reverted (https://invent.kde.org/plasma/breeze/-/commit/106188369fb40b517f66081151b18474eba27318). Is it possible to reapply the original version of my patch to the 5.23 branch?
Comment 6 Bug Janitor Service 2021-09-24 21:24:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/152
Comment 7 nyanpasu64 2021-09-24 22:56:42 UTC
Git commit 66c5e86d8b7bddfc6a1d00595777b56d01efd172 by Nyan Pasu.
Committed on 24/09/2021 at 21:14.
Pushed by ndavis into branch 'Plasma/5.23'.

Don't reserve room for spinbox buttons if buttons disabled

Previously, in Qt Widgets with the Breeze theme active,
QAbstractSpinBox::setButtonSymbols(QAbstractSpinBox::NoButtons) would
hide the buttons but leave a white space where the buttons would
normally be. This changes the Breeze theme to skip adding the width of
the hidden buttons to the spinbox's width.

M  +8    -7    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/commit/66c5e86d8b7bddfc6a1d00595777b56d01efd172